new proj/src/objects/GE_ES_Filter_Life_Rule__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Application__c</fullName>
        <label>Application</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Average_Life__c</fullName>
        <label>Average Life</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Cleaning_Type__c</fullName>
        <label>Cleaning Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_ES_Filter_Type__c</fullName>
        <label>Filter Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Raw_Materal__c</fullName>
        <label>Raw Materal</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Filter Life Rule</label>
    <nameField>
        <displayFormat>FLR-{00000}</displayFormat>
        <label>Filter Life Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filter Life Rule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>